[gd_scene load_steps=3 format=2]

[ext_resource path="res://characters/base_hero.gd" type="Script" id=1]
[ext_resource path="res://ui/floating_text/floating_text.tscn" type="PackedScene" id=3]

[node name="BaseHero" type="KinematicBody"]
script = ExtResource( 1 )

[node name="FloatingText" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="RotationTween" type="Tween" parent="."]
